ajout du ref local

--- a/index.html
+++ b/index.html
@@ -43,6 +43,31 @@
       content="https://nina-carducci.github.io/assets/images/nina.png"
     />
     <meta name="twitter:url" content="https://nina-carducci.github.io/" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Nina Carducci",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "68 avenue Alsace-Lorraine",
+          "addressLocality": "Bordeaux",
+          "addressRegion": "Nouvelle-Aquitaine",
+          "postalCode": "33200",
+          "addressCountry": "FR"
+          
+        },
+        "telephone": "+33 5 56 67 78 89",
+        "openingHours": "Mo-Fr 10:00-19:00",
+        "priceRange": "$$$",
+        "image": [
+          "https://nina-carducci.github.io/assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp",
+          "https://nina-carducci.github.io/assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp",
+          "https://nina-carducci.github.io/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
+      ]
+      }
+      </script>
   </head>
   <body>
     <div class="top-header">
