--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </script>
   </head>
   <body>
-    <div class="top-header">
+    <header class="top-header">
       <h1 class="name">Nina Carducci</h1>
       <div class="nav">
         <ul>
@@ -88,8 +88,9 @@
           </li>
         </ul>
       </div>
-    </div>
-    <div id="header">
+    </header>
+    <main>
+    <div id="carousel">
       <div
         id="carouselExampleIndicators"
         class="carousel slide"
@@ -186,7 +187,7 @@
     <div id="gallery">
       <h2 class="title">Portfolio</h2>
       <div class="container py-3">
-        <div class="gallery" style="display: none">
+        <div class="gallery none">
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
@@ -321,7 +322,7 @@
           <p>
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
-          <form action="" method="post">
+          <form action="#" method="post">
             <label for="nom">Nom</label>
             <input type="text" name="nom" id="nom" />
             <label for="email">Email</label>
@@ -344,5 +345,6 @@
         </div>
       </div>
     </div>
+  </main>
   </body>
 </html>
