--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </script>
   </head>
   <body>
-    <header class="top-header">
+    <header>
       <h1 class="name">Nina Carducci</h1>
       <div class="nav">
         <ul>
